# crypto-fpga-trader

./: CMakeLists.txt  README.md  ROADMAP.md  logs.jsonl  main.cpp
benchmarks/: BenchmarkLogger.cpp
include/client/: BinanceClient.h
include/common/: Coin.h  CoinManager.h  MovingAverage.h  Visualizer.h  dummy.h
include/logging/: Logger.h  dummy2.h
src/: Coin.cpp  CoinManager.cpp  Logger.cpp  MovingAverage.cpp  Visualizer.cpp  main.cpp
src/client/: BinanceClient.cpp
tests/: TestBinanceClient.cpp  TestCoinManager.cpp  TestLogger.cpp  logger_test.cpp  test.cpp
